# hyperbolic-semantic-networks

./: .cursorrules  .darwin-cluster.yaml  .gitignore  .zenodo.json  AGENTS.md  AI_DEFAULT_RULES.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLUSTER_RESOURCES_REAL.md  DEVELOPMENT.md  Dockerfile  EIXO_B_VALIDATION.md  FINAL_ACCEPTANCE_STATUS.md  ITERATION_12_DATA_MINING_COMPLETE.md  LEAN_EXTENSION_SUMMARY.md  LEAN_EXTENSION_V2.1.1.md  MAJOR_REVISIONS_ROADMAP.md  MAJOR_REVISION_MCTS_20_ITERATIONS.md  MANUSCRIPT_V1.9_FINAL_COMPLETE.md  MCTS_20_ITERATIONS_COMPLETE_SUMMARY.md  MCTS_FINAL_CORRECTION_PLAN.md  MCTS_FINAL_REPORT.md  MCTS_ITERATIONS_6_10_STATS_SCOPE.md  MINOR_REVISIONS_EXECUTION_PLAN.md  Makefile  NEXT_ACTIONS.md  NULLS_PROCESSING_STATUS.md  PARALLEL_NULLS_STATUS.md  PEER_REVIEW_RESPONSE_STRATEGY.md  PROGRESSO_NULLS_LIVE.md  PROGRESS_A3_B2.md  PROGRESS_UPDATE.md  PUSH_INSTRUCTIONS.md  PUSH_STATUS.md  README.md  README_FIRST.md  README_MIGRATION.md  (+17 more)
.claude/: bioinformatica-genial-core-instructions.xml  bioinformatica-genial-epistemic-integration.xml  bioinformatica-genial-literature-search.xml  bioinformatica-genial-mode.xml  bioinformática-genial-core-instructions.xml  bioinformática-genial-literature-search.xml  settings.json
archive/: AI_ASSISTANCE_STATEMENT.md  CLEANUP_COMPLETE.md  COMPLETE_DATA_SOURCES_MAP.md  COMPLETE_SCIENTIFIC_RIGOR_DOCUMENTATION.md  DARWIN_AGENTS_ACTIVATED.md  DARWIN_AGENTS_NEURO_PSYCH_ACTIVATION.md  DEEP_RESEARCH_METHODOLOGY.md  DEEP_RESEARCH_REPORT.md  EIXO_B_AUDIT.md  EXECUTIVE_SUMMARY.md  FINAL_AUDIT_ALL_REAL_DATA.md  FINAL_DECISION_NULLS.md  GITHUB_DEPRESSION_DATASETS_MAP.md  GITHUB_RELEASE_CREATED_SUCCESS.md  RUNME.md  (+22 more)
rust/: Cargo.toml
rust/curvature/: Cargo.toml
rust/curvature/benches/: wasserstein_bench.rs
rust/curvature/src/: lib.rs  sinkhorn.rs  wasserstein.rs
rust/null_models/: Cargo.toml
rust/null_models/benches/: null_model_bench.rs
rust/null_models/src/: configuration.rs  lib.rs  triadic_rewire.rs
(+1012 files in other folders)
